change encoding of settings.ini from UTF-8 to ANSI because otherwise Notepad might change it to UTF-8-BOM which causes problems

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -2,8 +2,8 @@
 # Layout: neo, adnw, adnwzjf, koy, kou
 layout=neo
 
-# use quote/Ã¤ as right level 3 modifier
-# Ã¤-Taste als rechten Ebene3-Modifier verwenden
+# use quote/ä as right level 3 modifier
+# ä-Taste als rechten Ebene3-Modifier verwenden
 symmetricalLevel3Modifiers=0
 
 # enable shift lock (activate by pressing both shift keys)
@@ -11,5 +11,5 @@ symmetricalLevel3Modifiers=0
 shiftLockEnabled=0
 
 # use QWERTZ for shortcuts
-# QWERTZ fÃ¼r Shortcuts verwenden
+# QWERTZ für Shortcuts verwenden
 qwertzForShortcuts=0
