new feature: swap left ctrl and left alt key

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -12,4 +12,8 @@ shiftLockEnabled=0
 
 # use QWERTZ for shortcuts
 # QWERTZ für Shortcuts verwenden
-qwertzForShortcuts=
+qwertzForShortcuts=0
+
+# swap left ctrl and left alt key
+# linke Strg- und linke Alt-Taste vertauschen
+swapLeftCtrlAndLeftAlt=0
