--- a/src/settings.ini
+++ b/src/settings.ini
@@ -13,3 +13,7 @@ shiftLockEnabled=0
 # use QWERTZ for shortcuts
 # QWERTZ für Shortcuts verwenden
 qwertzForShortcuts=0
+
+# swap left ctrl and left alt key
+# linke Strg- und linke Alt-Taste vertauschen
+swapLeftCtrlAndLeftAlt=0
