support levels 5 and 6 partially; map levels 2, 5 and 6 matching level 1 in a function

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -17,3 +17,7 @@ qwertzForShortcuts=0
 # swap left ctrl and left alt key
 # linke Strg- und linke Alt-Taste vertauschen
 swapLeftCtrlAndLeftAlt=0
+
+# support levels 5 and 6 (not complete, experimental)
+# Unterstützung der Ebenen 5 und 6 (unvollständig, experimentell)
+supportLevels5and6=0
