add row number and dead keys for levels 5 and 6; add no-break and narrow no-break space to levels 5 and 6

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -18,6 +18,6 @@ qwertzForShortcuts=0
 # linke Strg- und linke Alt-Taste vertauschen
 swapLeftCtrlAndLeftAlt=0
 
-# support levels 5 and 6 (not complete, experimental)
-# Unterstützung der Ebenen 5 und 6 (unvollständig, experimentell)
+# support levels 5 and 6 (experimental)
+# Unterstützung der Ebenen 5 und 6 (experimentell)
 supportLevels5and6=0
