--- a/src/settings.ini
+++ b/src/settings.ini
@@ -6,6 +6,10 @@ layout=neo
 # ä-Taste als rechten Ebene3-Modifier verwenden
 symmetricalLevel3Modifiers=0
 
+# enable caps lock (activate by pressing both shift keys)
+# Caps-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
+capsLockEnabled=0
+
 # enable shift lock (activate by pressing both shift keys)
 # Shift-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
 shiftLockEnabled=0
