--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-# Layout: neo, adnw, adnwzjf, koy, kou
+# Layout: neo, adnw, adnwzjf, bone, koy, kou
 layout=neo
 
 # use quote/ä as right level 3 modifier
