new option: swap left ctrl, alt and windows key (like ctrl:swap_lalt_lctl_lwin in Linux)

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -22,6 +22,11 @@ qwertzForShortcuts=0
 # linke Strg- und linke Alt-Taste vertauschen
 swapLeftCtrlAndLeftAlt=0
 
+# swap left ctrl, left alt and left windows key
+# linke Strg-, linke Alt- und linke Windows-Taste vertauschen
+# -> Win, Alt, Ctrl
+swapLeftCtrlLeftAltAndLeftWin=0
+
 # support levels 5 and 6 (experimental)
 # Unterstützung der Ebenen 5 und 6 (experimentell)
 supportLevels5and6=0
