new feature: level4 lock

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -14,6 +14,10 @@ capsLockEnabled=0
 # Shift-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
 shiftLockEnabled=0
 
+# enable level4 lock (activate by pressing both mod4 keys, experimental)
+# Ebene-4-Lock verwenden (aktivieren mit beiden Mod4-Tasten gleichzeitig, experimentell)
+level4LockEnabled=0
+
 # use QWERTZ for shortcuts
 # QWERTZ für Shortcuts verwenden
 qwertzForShortcuts=0
