--- a/src/settings.ini
+++ b/src/settings.ini
@@ -34,3 +34,7 @@ swapLeftCtrlLeftAltAndLeftWin=0
 # support levels 5 and 6 (experimental)
 # Unterstützung der Ebenen 5 und 6 (experimentell)
 supportLevels5and6=0
+
+# CapsLock key acts as Escape when hit alone (experimental)
+# CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird (experimentell)
+capsLockAsEscape=0
