--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -1,10 +1,14 @@
 [Settings]
-# Layout: neo, adnw, adnwzjf, bone, koy, kou
+# Layout: neo, adnw, adnwzjf, bone, koy, kou, vou
 layout=neo
 
 # use quote/ä as right level 3 modifier
 # ä-Taste als rechten Ebene3-Modifier verwenden
 symmetricalLevel3Modifiers=0
+
+# use Return as right level 3 modifier
+# Enter-Taste als rechten Ebene3-Modifier verwenden
+returnKeyAsMod3R=0
 
 # enable caps lock (activate by pressing both shift keys)
 # Caps-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
@@ -38,3 +42,7 @@ supportLevels5and6=0
 # CapsLock key acts as Escape when hit alone (experimental)
 # CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird (experimentell)
 capsLockAsEscape=0
+
+# the right level 3 modifier acts as Return when hit alone (experimental)
+# der rechte Ebene3-Modifier sendet Return, wenn er alleine angeschlagen wird (experimentell)
+mod3RAsReturn=0
