new options: 'tabKeyAsMod4L' and 'mod4LAsTab'

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -10,6 +10,10 @@ symmetricalLevel3Modifiers=0
 # Enter-Taste als rechten Ebene3-Modifier verwenden
 returnKeyAsMod3R=0
 
+# use Tab as left level 4 modifier
+# Tab-Taste als linken Ebene4-Modifier verwenden
+tabKeyAsMod4L=0
+
 # enable caps lock (activate by pressing both shift keys)
 # Caps-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
 capsLockEnabled=0
@@ -46,3 +50,7 @@ capsLockAsEscape=0
 # the right level 3 modifier acts as Return when hit alone (experimental)
 # der rechte Ebene3-Modifier sendet Return, wenn er alleine angeschlagen wird (experimentell)
 mod3RAsReturn=0
+
+# the left level 4 modifier acts as Tab when hit alone (experimental)
+# der linke Ebene4-Modifier sendet Tab, wenn er alleine angeschlagen wird (experimentell)
+mod4LAsTab=0
