new option: 'debugWindow'

--- a/bin/settings.ini
+++ b/bin/settings.ini
@@ -54,3 +54,8 @@ mod3RAsReturn=0
 # the left level 4 modifier acts as Tab when hit alone (experimental)
 # der linke Ebene4-Modifier sendet Tab, wenn er alleine angeschlagen wird (experimentell)
 mod4LAsTab=0
+
+# show debug output in a separate console window
+# Debug-Ausgabe in einem separaten Konsolen-Fenster anzeigen
+# (wenn neo-llkh.exe in der Git Bash gestartet wird, sollte dieser Wert auf 0 gesetzt werden)
+debugWindow=0
