--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,10 +1,18 @@
 [Settings]
-# Layout: neo, adnw, adnwzjf, bone, koy, kou
+# Layout: neo, adnw, adnwzjf, bone, koy, kou, vou
 layout=neo
 
 # use quote/ä as right level 3 modifier
 # ä-Taste als rechten Ebene3-Modifier verwenden
 symmetricalLevel3Modifiers=0
+
+# use Return as right level 3 modifier
+# Enter-Taste als rechten Ebene3-Modifier verwenden
+returnKeyAsMod3R=0
+
+# use Tab as left level 4 modifier
+# Tab-Taste als linken Ebene4-Modifier verwenden
+tabKeyAsMod4L=0
 
 # enable caps lock (activate by pressing both shift keys)
 # Caps-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
@@ -38,3 +46,16 @@ supportLevels5and6=0
 # CapsLock key acts as Escape when hit alone (experimental)
 # CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird (experimentell)
 capsLockAsEscape=0
+
+# the right level 3 modifier acts as Return when hit alone (experimental)
+# der rechte Ebene3-Modifier sendet Return, wenn er alleine angeschlagen wird (experimentell)
+mod3RAsReturn=0
+
+# the left level 4 modifier acts as Tab when hit alone (experimental)
+# der linke Ebene4-Modifier sendet Tab, wenn er alleine angeschlagen wird (experimentell)
+mod4LAsTab=0
+
+# show debug output in a separate console window
+# Debug-Ausgabe in einem separaten Konsolen-Fenster anzeigen
+# (wenn neo-llkh.exe in der Git Bash gestartet wird, sollte dieser Wert auf 0 gesetzt werden)
+debugWindow=0
