Add qwertz keyboard layout
While you are still typing with a familiar keyboard layout you get in
touch with the special layers of neo.

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-# Layout: neo, adnw, adnwzjf, bone, koy, kou, vou
+# Layout: neo, adnw, adnwzjf, bone, koy, kou, vou, qwertz
 layout=neo
 
 # use quote/ä as right level 3 modifier
