--- a/src/settings.ini
+++ b/src/settings.ini
@@ -1,10 +1,10 @@
 [Settings]
 # Layout: neo, adnw, adnwzjf, bone, koy, kou, vou, qwertz
-layout=neo
+layout=kou
 
-# use quote/ä as right level 3 modifier
-# ä-Taste als rechten Ebene3-Modifier verwenden
-symmetricalLevel3Modifiers=0
+# use quote/ï¿½ as right level 3 modifier
+# ï¿½-Taste als rechten Ebene3-Modifier verwenden
+symmetricalLevel3Modifiers=1
 
 # use Return as right level 3 modifier
 # Enter-Taste als rechten Ebene3-Modifier verwenden
@@ -16,7 +16,7 @@ tabKeyAsMod4L=0
 
 # enable caps lock (activate by pressing both shift keys)
 # Caps-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
-capsLockEnabled=0
+capsLockEnabled=1
 
 # enable shift lock (activate by pressing both shift keys)
 # Shift-Lock verwenden (aktivieren mit beiden Shift-Tasten gleichzeitig)
@@ -24,11 +24,11 @@ shiftLockEnabled=0
 
 # enable level4 lock (activate by pressing both mod4 keys, experimental)
 # Ebene-4-Lock verwenden (aktivieren mit beiden Mod4-Tasten gleichzeitig, experimentell)
-level4LockEnabled=0
+level4LockEnabled=1
 
 # use QWERTZ for shortcuts
-# QWERTZ für Shortcuts verwenden
-qwertzForShortcuts=0
+# QWERTZ fï¿½r Shortcuts verwenden
+qwertzForShortcuts=1
 
 # swap left ctrl and left alt key
 # linke Strg- und linke Alt-Taste vertauschen
@@ -40,8 +40,8 @@ swapLeftCtrlAndLeftAlt=0
 swapLeftCtrlLeftAltAndLeftWin=0
 
 # support levels 5 and 6 (experimental)
-# Unterstützung der Ebenen 5 und 6 (experimentell)
-supportLevels5and6=0
+# Unterstï¿½tzung der Ebenen 5 und 6 (experimentell)
+supportLevels5and6=1
 
 # CapsLock key acts as Escape when hit alone (experimental)
 # CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird (experimentell)
