settings: capsLockAsEscape not experimental anymore

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -41,10 +41,10 @@ swapLeftCtrlLeftAltAndLeftWin=0
 
 # support levels 5 and 6 (experimental)
 # Unterstützung der Ebenen 5 und 6 (experimentell)
-supportLevels5and6=1	
+supportLevels5and6=1
 
-# CapsLock key acts as Escape when hit alone (experimental)
-# CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird (experimentell)
+# CapsLock key acts as Escape when hit alone
+# CapsLock-Taste sendet Escape, wenn sie alleine angeschlagen wird
 capsLockAsEscape=0
 
 # the right level 3 modifier acts as Return when hit alone (experimental)
