custom layouts: finish

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -2,6 +2,11 @@
 # Layout: neo, adnw, adnwzjf, bone, koy, kou, vou, qwertz
 layout=neo
 
+# use a custom layout (32 chars: 11 top, 11 middle, 10 bottom row)
+# eigenes Layout benutzen (32 Zeichen: 11 obere, 11 mittlere, 10 untere Reihe)
+# customLayout=qwertzuiopüasdfghjklöäyxcvbnm,.-
+# customLayout=xvlcwkhgfqßuiaeosnrtdyüöäpzbm,.j
+
 # use quote/ä as right level 3 modifier
 # ä-Taste als rechten Ebene3-Modifier verwenden
 symmetricalLevel3Modifiers=0
