New feature: Mod-Tap keys

--- a/src/settings.ini
+++ b/src/settings.ini
@@ -64,3 +64,18 @@ mod4LAsTab=0
 # Debug-Ausgabe in einem separaten Konsolen-Fenster anzeigen
 # (wenn neo-llkh.exe in der Git Bash gestartet wird, sollte dieser Wert auf 0 gesetzt werden)
 debugWindow=0
+
+# ModTap keys
+# use a letter key as modifier when held down while another key is tapped (= pressed + released)
+# Buchstabentaste in Modifier verwandeln, wenn sie gehalten wird, während eine andere Taste betätigt wird (drücken + loslassen)
+#a=ModTap(mod3)
+#s=ModTap(shift)
+#d=ModTap(ctrl)
+#f=ModTap(mod4)
+#x=ModTap(alt)
+
+#,=ModTap(alt)
+#j=ModTap(mod4)
+#k=ModTap(ctrl)
+#l=ModTap(shift)
+#ö=ModTap(mod3)
